--- a/assets/scss/main.sass
+++ b/assets/scss/main.sass
@@ -42,6 +42,9 @@ body
   background-size: 100% 100%
   min-height: 100vh
 
+.content-wrapper
+  min-height: 100vh
+
   @include media-breakpoint-up(xs)
     content: "xs"
 
@@ -63,8 +66,11 @@ body
 .text-bold
   font-weight: 800
 
-.content-wrapper
+.index-bg
   min-height: 100vh
+  background: url("../img/hero_image.jpg") no-repeat, linear-gradient(#102238 80%, transparent)
+  background-size: 100% auto
+  background-position-y: 1em
 
 a
   color: $color-link
