--- a/assets/scss/topnav.sass
+++ b/assets/scss/topnav.sass
@@ -122,7 +122,7 @@
       border-left: 6px solid $dark-white
       border-top: 6px solid $dark-white
       border-right: 6px solid transparent
-      position: absolute
+      //position: absolute
       display: inline-block
       left: 76%
       -webkit-transform: rotate(45deg)
@@ -148,30 +148,4 @@
   &:active, &:hover
     background-position: -2.5em 0
 
-.badge
-  position: absolute
-  left: -10px
-  top: 30px
-  background-color: $color-badge
-  @include transform(rotate(-45deg) scale(1.3) skew(0deg) translate(10px))
-  text-align: center
-  color: black
-  padding: 0 .7em
-  border-top: 0px
-  line-height: 20px
-  font-weight: lighter
-  margin: 0
-  &:after
-    content: ' '
-    position: absolute
-    right: -19px
-    top: 0px
-    border-right: 20px solid transparent
-    border-bottom: 20px solid $color-badge
-  &:before
-    content: ' '
-    position: absolute
-    left: -19px
-    top: 0px
-    border-left: 20px solid transparent
-    border-bottom: 20px solid $color-badge
+
